--- a/index.html
+++ b/index.html
@@ -3,3 +3,8 @@
 <p>
   <a href="https://codepen.io/cehentko/">Code Pen</a>
 </p>
+
+<h2>Assignments:</h2>
+<p>
+  <a href="https://codepen.io/cehentko/pen/Pdpxqz">Prog00 - CodePen</a>
+</p>
