--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Welcome to Cecilia's page</h1>
+<h1>Welcome to Cecilia's CIS255 page</h1>
 <h2>Useful Links:</h2>
 <p>
   <a href="https://codepen.io/cehentko/">Code Pen</a>
