--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <h2>Assignments:</h2>
 <p>
   <a href="https://codepen.io/cehentko/pen/Pdpxqz">Prog00 - CodePen</a>
+  <a href="https://webp.svsu.edu/~cehentko/cis255.html">Prog00 - VDrive</a>
+  <a href="http://csis.svsu.edu/~cehentko/cis255.html">Prog00 - CSIS Server</a>
 </p>
 
 <h2>Useful Links:</h2>
