--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <h2>Assignments:</h2>
 <p>
-  <a href="https://codepen.io/cehentko/pen/Pdpxqz">Prog00 - CodePen</a>
-  <a href="https://webp.svsu.edu/~cehentko/cis255.html">Prog00 - VDrive</a>
-  <a href="http://csis.svsu.edu/~cehentko/cis255.html">Prog00 - CSIS Server</a>
+  <a href="https://codepen.io/cehentko/pen/Pdpxqz">Prog00 - CodePen</a><br/>
+  <a href="https://webp.svsu.edu/~cehentko/cis255.html">Prog00 - VDrive</a><br/>
+  <a href="http://csis.svsu.edu/~cehentko/cis255.html">Prog00 - CSIS Server</a><br/>
 </p>
 
 <h2>Useful Links:</h2>
