--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 
 <h2>Assignments:</h2>
 <p>
-  <a href="https://codepen.io/cehentko/pen/Pdpxqz">Prog00 - CodePen</a><br/>
-  <a href="https://webp.svsu.edu/~cehentko/cis255.html">Prog00 - VDrive</a><br/>
-  <a href="http://csis.svsu.edu/~cehentko/cis255.html">Prog00 - CSIS Server</a><br/>
-  <a href="https://cehentko.000webhostapp.com/">Prog00 - 000webhost</a><br/>
+  1. Topic: What citizens should know when law enforcement officers ask to have your phone.
+  2. GitHub Pages: <a href="https://cehentko.github.io/pages/">Prog00 - GitHub</a>
+  3. CodePen: <a href="https://codepen.io/cehentko/pen/Pdpxqz">Prog00 - CodePen</a><br/>
+  4. M-Drive: <a href="https://webp.svsu.edu/~cehentko/cis255.html">Prog00 - M-Drive</a><br/>
+  5. CSIS Server: <a href="http://csis.svsu.edu/~cehentko/cis255.html">Prog00 - CSIS Server</a><br/>
+  6. 000webhost: <a href="https://cehentko.000webhostapp.com/">Prog00 - 000webhost</a><br/>
 </p>
 
 <h2>Useful Links:</h2>
