--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <h1>Welcome to Cecilia's CIS255 page</h1>
 
 <h2>Assignments:</h2>
+<h3>Prog00</h3>
 <p>
   1. Topic: What citizens should know when law enforcement officers ask to have your phone.
-  2. GitHub Pages: <a href="https://cehentko.github.io/pages/">Prog00 - GitHub</a>
-  3. CodePen: <a href="https://codepen.io/cehentko/pen/Pdpxqz">Prog00 - CodePen</a><br/>
-  4. M-Drive: <a href="https://webp.svsu.edu/~cehentko/cis255.html">Prog00 - M-Drive</a><br/>
-  5. CSIS Server: <a href="http://csis.svsu.edu/~cehentko/cis255.html">Prog00 - CSIS Server</a><br/>
-  6. 000webhost: <a href="https://cehentko.000webhostapp.com/">Prog00 - 000webhost</a><br/>
+  2. GitHub Pages: <a href="https://cehentko.github.io/pages/">GitHub</a><br/>
+  3. CodePen: <a href="https://codepen.io/cehentko/pen/Pdpxqz">CodePen</a><br/>
+  4. M-Drive: <a href="https://webp.svsu.edu/~cehentko/cis255.html">M-Drive</a><br/>
+  5. CSIS Server: <a href="http://csis.svsu.edu/~cehentko/cis255.html">CSIS Server</a><br/>
+  6. 000webhost: <a href="https://cehentko.000webhostapp.com/">000webhost</a><br/>
 </p>
 
 <h2>Useful Links:</h2>
