--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h2>Assignments:</h2>
 <h3>Prog00</h3>
 <p>
-  1. Topic: What citizens should know when law enforcement officers ask to have your phone.
+  1. Topic: What citizens should know when law enforcement officers ask to have your phone.<br/>
   2. GitHub Pages: <a href="https://cehentko.github.io/pages/">GitHub</a><br/>
   3. CodePen: <a href="https://codepen.io/cehentko/pen/Pdpxqz">CodePen</a><br/>
   4. M-Drive: <a href="https://webp.svsu.edu/~cehentko/cis255.html">M-Drive</a><br/>
