--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <h1>Welcome to Cecilia's CIS255 page</h1>
 
 <h2>Assignments:</h2>
-<h3>Prog00</h3>
-<p>
+<h3>Prog00:</h3>
   1. Topic: What citizens should know when law enforcement officers ask to have your phone.<br/>
-  2. GitHub Pages: <a href="https://cehentko.github.io/pages/">GitHub</a><br/>
-  3. CodePen: <a href="https://codepen.io/cehentko/pen/Pdpxqz">CodePen</a><br/>
-  4. M-Drive: <a href="https://webp.svsu.edu/~cehentko/cis255.html">M-Drive</a><br/>
-  5. CSIS Server: <a href="http://csis.svsu.edu/~cehentko/cis255.html">CSIS Server</a><br/>
-  6. 000webhost: <a href="https://cehentko.000webhostapp.com/">000webhost</a><br/>
-</p>
+  2. <a href="https://cehentko.github.io/pages/">GitHub Pages</a><br/>
+  3. <a href="https://codepen.io/cehentko/pen/Pdpxqz">CodePen</a><br/>
+  4. <a href="https://webp.svsu.edu/~cehentko/cis255.html">M-Drive</a><br/>
+  5. <a href="http://csis.svsu.edu/~cehentko/cis255.html">CSIS Server</a><br/>
+  6. <a href="https://cehentko.000webhostapp.com/">000webhost</a><br/>
 
 <h2>Useful Links:</h2>
 <p>
