--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h2>Assignments:</h2>
 <p>
-<h3>Prog00:</h3>
+<b>Prog00:<b><br/>
   1. Topic: What citizens should know when law enforcement officers ask to have your phone.<br/>
   2. <a href="https://cehentko.github.io/pages/">GitHub Pages</a><br/>
   3. <a href="https://codepen.io/cehentko/pen/Pdpxqz">CodePen</a><br/>
