--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   5. <a href="http://csis.svsu.edu/~cehentko/cis255.html">CSIS Server</a><br/>
   6. <a href="https://cehentko.000webhostapp.com/">000webhost</a><br/>
 </p>
+<br/>
+<b>Prog01:</b><br/>
+  1. <a href="">WordPress</a><br/>
+  2. <a href="">CodePen</a><br/>
+  3. <a href="">000webhost</a><br/>
+  4. Which hosting platform, (a), (b), or (c), above, do you think is best for keeping information about articles?<br/>
+  <p> Answer:
+  </p>
+</p>
 
 <h2>Useful Links:</h2>
 <p>
