--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br/>
 <b>Prog01:</b><br/>
   1. <a href="https://cis255.wordpress.com/editors-and-topics/">WordPress</a><br/>
-  2. <a href="">CodePen</a><br/>
+  2. <a href="https://codepen.io/cehentko/pen/mGGPLG">CodePen</a><br/>
   3. <a href="">000webhost</a><br/>
   4. Which hosting platform, (a), (b), or (c), above, do you think is best for keeping information about articles?<br/>
   <p> Answer:
