--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   2. <a href="https://codepen.io/cehentko/pen/mGGPLG">CodePen</a><br/>
   3. <br/>
   a. <a href="https://webp.svsu.edu/~cehentko/prog01.html">M-Drive</a><br/>
-  b. <a href="">CSIS Server</a><br/>
+  b. <a href="http://csis.svsu.edu/~cehentko/prog01.html">CSIS Server</a><br/>
   c. <a href="https://cehentko.000webhostapp.com/prog01.html">000webhost</a><br/>
   4. Which hosting platform, (a), (b), or (c), above, do you think is best for keeping information about articles?<br/>
   <p> Answer:
