--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <br />
 <p>
 <b>Prog02:</b><br />
-  1. <a href=""></a><br />
+  1. <a href="https://github.com/cehentko/PhpProject13">GitHub Repo</a><br />
   2. <a href="http://csis.svsu.edu/~cehentko/PhpProject13/">CSIS Server</a><br />
 </p>
 
