--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           			<ol>
             				<li><a href="http://csis.svsu.edu/~cehentko/prog03.html">Sports Form</a></li>
 					<li>I decided to use the CSIS server because it is the hosting service I am most familiar with</li>
+					<li><a href="http://csis.svsu.edu/~cehentko/prog03.css">CSS file for Sport Form</li>
           			</ol>
         		</section>
      		</article>
