--- a/index.html
+++ b/index.html
@@ -74,7 +74,29 @@
           			</ol>
         		</section>
      		</article>
-    
+
+		<article>
+			<header>
+				<h2>Prog04</h2>
+			</header>
+			<section>
+          			<ol>
+            				<li><a href="https://webp.svsu.edu/~cehentko/jsAddFormLine.html">jsAddFormLine.html</a></li>
+          			</ol>
+        		</section>
+     		</article>
+
+		<article>
+			<header>
+				<h2>Prog05</h2>
+			</header>
+			<section>
+          			<ol>
+            				<li><a href="">prog5</a></li>
+          			</ol>
+        		</section>
+     		</article>
+		
      		<script></script>
 	</body>
 </html>
