--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			</header>
 			<section>
           			<ol>
-            				<li><a href="https://webp.svsu.edu/~cehentko/jsAddFormLine.html">jsAddFormLine.html</a></li>
+            				<li><a href="https://webp.svsu.edu/~cehentko/jsAddFormLine.html">Zodiac Sign's with JavaScript</a></li>
           			</ol>
         		</section>
      		</article>
@@ -92,7 +92,7 @@
 			</header>
 			<section>
           			<ol>
-            				<li><a href="">prog5</a></li>
+            				<li><a href="https://webp.svsu.edu/~cehentko/prog5.html"></a>Zodiac Sign's with Object Oriented JavaScript</li>
           			</ol>
         		</section>
      		</article>
