--- a/index.html
+++ b/index.html
@@ -2,17 +2,31 @@
 <html lang="en">
 	<head>
 		<link rel='icon' href='https://webp.svsu.edu/~cehentko/htmllogo.png' type='image/png' />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		
+		<!-- Bootstrap core CSS -->
+		<link href="https://blackrockdigital.github.io/startbootstrap-bare/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	
 		<style>
 			h1 { color: blue; }
       			h2, ul, ol {
 		   		     margin-top: 0;
-		 		   }
+		 	}
+			.jumbotron {
+				background-color:LightBlue;
+				color:white;
+				padding: 30px 15px;
+	  		}
     		</style>
   	</head>
   
   	<body>
 		<header>
-      			<h1>Cecilia Hentkowski (cehentko)</h1>
+			<div class="jumbotron text-center">
+      				<h1>Cecilia Hentkowski (cehentko)</h1>
+			</div>
     		</header>
 		<article>
       			<header>
