--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			</header>
 			<section>
           			<ol>
-            				<li><a href="https://webp.svsu.edu/~cehentko/prog5.html"></a>Zodiac Sign's with Object Oriented JavaScript</li>
+            				<li><a href="https://webp.svsu.edu/~cehentko/prog5.html">Zodiac Sign's with Object Oriented JavaScript</a></li>
           			</ol>
         		</section>
      		</article>
