--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Cecilia Hentkowski (cehentko)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cehentko.github.io/pages/assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="container">
 					<!-- Logo -->
-					<h1 id="logo"><a href="index.html">Cecilia Hentkowski (cehentko)</a></h1>
+					<h1 id="logo"><a href="https://cehentko.github.io/pages/index.html">Cecilia Hentkowski (cehentko)</a></h1>
 					<p>A collection of my CIS255 work from the Fall 2018 Semester.</p>
 				</div>
 			</section>
@@ -33,7 +33,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic01.jpg" alt="" /></a>
 								<header>
 									<h3>Prog00:</h3>
 								</header>
@@ -53,7 +53,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic02.jpg" alt="" /></a>
 								<header>
 									<h3>Prog01:</h3>
 								</header>
@@ -329,12 +329,12 @@
 		</div>
 
 		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.dropotron.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+		<script src="https://cehentko.github.io/pages/assets/js/jquery.min.js"></script>
+		<script src="https://cehentko.github.io/pages/assets/js/jquery.dropotron.min.js"></script>
+		<script src="https://cehentko.github.io/pages/assets/js/browser.min.js"></script>
+		<script src="https://cehentko.github.io/pages/assets/js/breakpoints.min.js"></script>
+		<script src="https://cehentko.github.io/pages/assets/js/util.js"></script>
+		<script src="https://cehentko.github.io/pages/assets/js/main.js"></script>
 
 	</body>
 </html>
