--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<section id="header">
 				<div class="container">
 					<!-- Logo -->
-					<h1 id="logo"><a href="https://cehentko.github.io/pages/index.html">Cecilia Hentkowski (cehentko)</a></h1>
-					<p>A collection of my CIS255 work from the Fall 2018 Semester.</p>
+					<h1 id="logo"><a href="https://cehentko.github.io/pages/index.html">Cecilia Hentkowski</a></h1>
+					<p>(cehentko)</p>
 				</div>
 			</section>
 
