--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<section>
 								<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic01.jpg" alt="" /></a>
 								<header>
-									<h3>Prog00:</h3>
+									<h3><strong>Prog00</strong></h3>
 								</header>
 								<section>
 									<ol>
@@ -55,7 +55,7 @@
 							<section>
 								<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic02.jpg" alt="" /></a>
 								<header>
-									<h3>Prog01:</h3>
+									<h3><strong>Prog01</strong></h3>
 								</header>
 								<section>
 									<ol>
@@ -82,7 +82,7 @@
 							<section>
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<header>
-									<h3>Prog02:</h3>
+									<h3><strong>Prog02</strong></h3>
 								</header>
 								<section>
 									<ol>
@@ -98,7 +98,7 @@
 							<section>
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<header>
-									<h3>Prog03:</h3>
+									<h3><strong>Prog03</strong></h3>
 								</header>
 								<section>
 									<ol>
@@ -115,7 +115,7 @@
 							<section>
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<header>
-									<h3>Prog04:</h3>
+									<h3><strong>Prog04</strong></h3>
 								</header>
 								<section>
 									<ol>
@@ -130,7 +130,7 @@
 							<section>
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<header>
-									<h3>Prog05:</h3>
+									<h3><strong>Prog05</strong></h3>
 								</header>
 								<section>
 									<ol>
