--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://cehentko.github.io/pages/assets/css/main.css" />
+		<style>
+			li {
+				text-align: left;	
+			}
+		</style>
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
