--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic01.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic01.jpg" alt="" /></a>-->
 								<header>
 									<h3><strong>Prog00</strong></h3>
 								</header>
@@ -58,7 +58,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic02.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="https://cehentko.github.io/pages/images/pic02.jpg" alt="" /></a>-->
 								<header>
 									<h3><strong>Prog01</strong></h3>
 								</header>
@@ -76,16 +76,13 @@
 										<li>Which hosting platform, (a), (b), or (c), above, do you think is best for keeping information about articles?<br/> <b>Answer:</b> I believe (a) M-Drive is the best for keeping information about articles. The reason for this is because 000webhost could change its mind at any time and charge for services, the host could also be shut down for any given reason. Furthermore, the CSIS server is a bad option simply for the fact that we already have issues with the CSIS server. It does not even work properly half of the time. Whereas, M-drive has remained consistent and reliable throughout my entire college career.</li>
 									</ol>
 								</p>
-								<!--<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-								I started it as a way to both test my responsive tools and sharpen up my coding
-								and design skills a bit.</p>-->
 							</section>
 						</div>
 						
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>-->
 								<header>
 									<h3><strong>Prog02</strong></h3>
 								</header>
@@ -101,7 +98,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>-->
 								<header>
 									<h3><strong>Prog03</strong></h3>
 								</header>
@@ -118,7 +115,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>-->
 								<header>
 									<h3><strong>Prog04</strong></h3>
 								</header>
@@ -133,7 +130,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- Feature -->
 							<section>
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>-->
 								<header>
 									<h3><strong>Prog05</strong></h3>
 								</header>
