--- a/index.html
+++ b/index.html
@@ -148,17 +148,14 @@
 			<!-- Banner -->
 			<section id="banner">
 				<div class="container">
-					<p>Use this space for <strong>profound thoughts</strong>.<br />
-					Or an enormous ad. Whatever.</p>
+					<p><strong>Thanks for Stopping by!</strong>.<br />
+					Contact me or follow me using the info/links below.</p>
 				</div>
 			</section>
 
 			<!-- Footer -->
 			<section id="footer">
 				<div class="container">
-					<header>
-						<h2>Thanks for Stopping by!</h2>
-					</header>
 						<div class="col-6 col-12-medium">
 							<section>
 								<div class="row">
