--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			<!-- Banner -->
 			<section id="banner">
 				<div class="container">
-					<p><strong>Thanks for Stopping by!</strong>.<br />
+					<p><strong>Thanks for Stopping by!</strong><br />
 					Contact me or follow me using the info/links below.</p>
 				</div>
 			</section>
@@ -176,7 +176,7 @@
 									</div>
 									<div class="col-6 col-12-small">
 										<ul class="icons">
-											<li class="icon fa fa-linkedin-square">
+											<li class="icon fa-linkedin-square">
 												<a href="https://www.linkedin.com/in/cecilia-hentkowski-1b9561167/">linkedin.com/in/cecilia-hentkowski-1b9561167</a>
 											</li>
 											<li class="icon fa-instagram">
