--- a/index.html
+++ b/index.html
@@ -141,6 +141,36 @@
 								</p>
 							</section>
 						</div>
+						
+						<div class="col-4 col-6-medium col-12-small">
+							<!-- Feature -->
+							<section>
+								<!--<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>-->
+								<header>
+									<h3><strong>Prog06</strong></h3>
+								</header>
+								<p>
+									<ol>
+										<li><a href="https://webp.svsu.edu/~cehentko/prog06.html">Zodiac Sign's by Birthdate with JQuery</a></li>
+									</ol>
+								</p>
+							</section>
+						</div>
+
+						<div class="col-4 col-6-medium col-12-small">
+							<!-- Feature -->
+							<section>
+								<!--<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>-->
+								<header>
+									<h3><strong>Prog07</strong></h3>
+								</header>
+								<p>
+									<ol>
+										<li><a href="https://webp.svsu.edu/~cehentko/angularjscode.html">AngularJS Code</a></li>
+									</ol>
+								</p>
+							</section>
+						</div>
 					</div>
 				</div>
 			</section>
