--- a/index.html
+++ b/index.html
@@ -165,8 +165,15 @@
 									<h3><strong>Prog07</strong></h3>
 								</header>
 								<p>
+									<a href="https://webp.svsu.edu/~cehentko/angularjscode.html">AngularJS Tutorials</a><br />
+									
+									<h3><strong>OR</strong></h3>
+								
 									<ol>
-										<li><a href="https://webp.svsu.edu/~cehentko/angularjscode.html">AngularJS Code</a></li>
+										<li><a href="https://webp.svsu.edu/~cehentko/angulartut/angulartut.html">angulartut</a></li>
+										<li><a href="https://webp.svsu.edu/~cehentko/angulartut/angulartut2.html">angulartut2</a></li>
+										<li><a href="https://webp.svsu.edu/~cehentko/angulartut/angulartut3.html">angulartut3</a></li>
+										<li><a href="https://webp.svsu.edu/~cehentko/angulartut/angulartut4.html">angulartut4</a></li>
 									</ol>
 								</p>
 							</section>
