--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@
 								<p>
 									<ol>
 										<li><a href="https://webp.svsu.edu/~cehentko/prog06.html">Zodiac Sign's by Birthdate with JQuery</a></li>
+										<li>Differences in jQuery and JavaScript:
+											<ol>
+												<li>JavaScript is a scripting language for interface interactions and for controlling the document content, whereas jQuery is a fast and concise JavaScript library for event handling, animating, and Ajax interactions.</li>
+												<li>JavaScript can exist by itself, whereas jQuery cannot.</li>
+												<li>jQuery is optimized to do the common scripting functions with fewer lines of code, whereas JavaScript would take up many more lines to write the same code.</li>
+												<li>JavaScript is faster than jQuery for accessing DOM, but can be slower when the code is more complex which jQuery can handle.</li>
+												<li>With JavaScript developers need to handle multi-browser compatibility by writing their own code, whereas jQuery is a multi-browser JavaScript library which reduces the work of developers during deployment.</li>
+											</ol>
+										</li>
 									</ol>
 								</p>
 							</section>
